[package]
name = "markov"
version = "0.1.0"
authors = ["Alexandre Kirszenberg <alexandre.kirszenberg@epita.fr>"]
edition = "2018"

[features]
default = []
web = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]

[lib]
# FIXME: Should be target-dependent.
# See: https://github.com/rust-lang/cargo/issues/4881
crate-type = ["cdylib", "rlib"]
name = "markov"
path = "src/lib.rs"

[[bin]]
name = "markov"
path = "src/bin.rs"

[dependencies]
image = { version = "0.22.5", default-features = false, features = [
  "gif_codec",
  "jpeg",
  "ico",
  "png_codec",
  "pnm",
  "tga",
  "tiff",
  "webp",
  "bmp",
  "hdr",
  "dxt"
] }
rand = "0.7.3"
rayon = "1.3.0"
permutohedron = "0.2.4"
palette = "*"
wasm-bindgen = { version = "0.2.58", optional = true }
js-sys = { version = "0.3.35", optional = true }
web-sys = { version = "0.3.35", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
